# mcp-server-starter

./: .gitignore  DESIGN.md  README.md  client_smoke_test.py  client_smoke_test_fastmcp.py  index.html  pyproject.toml  server.py  server_fastmcp.py  tutorial.html
.github/workflows/: ci.yml
docs/: 00-overview.md  01-quickstart.md  02-architecture.md  03-step-by-step.md  04-deployment.md  05-common-pitfalls.md  06-customize-for-your-use-case.md  07-workshop-and-consulting.md  08-fastmcp-comparison.md
docs/superpowers/plans/: 2026-06-03-fastmcp-comparison.md
docs/superpowers/specs/: 2026-06-03-fastmcp-comparison-design.md
